[project]
name = "lanchain-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=0.3.27",
    "langchain-community>=0.4",
    "langchain-core>=0.3.79",
    "langchain-openai>=0.3.35",
    "langchain-tavily>=0.2.12",
    "langgraph>=0.6.10",
    "langgraph-checkpoint-sqlite>=3.0.0",
    "langgraph-cli[inmem]>=0.4.4",
    "langgraph-prebuilt>=1.0.1",
    "langgraph-sdk>=0.2.9",
    "langsmith>=0.4.37",
    "notebook>=7.4.7",
    "trustcall>=0.0.39",
    "wikipedia>=1.4.0",
]
